# lit_review_machine

./: .gitignore  main.py  prompts.py  pyproject.toml
lit_review_machine/: outputs.py  processing.py  prompts.py  utils.py
