[project]
name = "my_project"
version = "0.0.1"
description = "Full dependency set for my research project"
requires-python = ">=3.12,<3.13"

dependencies = [
    "python-dotenv",
    "openai",
    "scholarly",
    "unpywall",
    "pandas",
    "rapidfuzz",
    "numpy",
    "networkx",
    "semanticscholar",
    "pymupdf",
    "kneed",
    "langchain-text-splitters",
    "umap-learn",
    "scikit-learn",
    "hdbscan",
    "python-docx",
    "pyarrow",
    "fastparquet",
    "requests",
    "bs4", 
    "crossref",
    "backoff", 
    "tiktoken", 
    "pyarrow"
]